@@ -151,8 +151,8 @@ if ($at->is_related_media) {
     my $key =  $widget . '|' . $dt->get_id;
 
     # Get the value.
-    $vals->{value} = $dt->get_value(ISO_8601_FORMAT);
-    $vals->{value} = $at_obj->get_default_val unless defined $vals->{value};
+    $vals->{value} = $dt->get_value(ISO_8601_FORMAT)
+        || $at_obj->get_default_val;
     if ($vals->{props}{type} eq 'checkbox') {
         $vals->{props}{chk} = $vals->{value};
         $vals->{value} = 1;
@@ -160,14 +160,18 @@ if ($at->is_related_media) {
 
     # Set the array of possible values, if necessary.
     if ( my $tmp = $vals->{props}{vals} ) {
-        my $val_prop;
-        foreach my $line (split /\n/, $tmp) {
-            # (c.f. comp/widgets/profile/displayAttrs.mc)
-            my ($v, $l) = split /\s*(?<!\\),\s*/, $line;
-            for ($v, $l) { s/\\,/,/g }
-            push @$val_prop, [$v, $l];
+        if ($vals->{props}{type} eq 'codeselect') {
+            $vals->{props}{vals} = eval_codeselect($tmp);
+        } else {
+            my $val_prop;
+            foreach my $line (split /\n/, $tmp) {
+                # (c.f. comp/widgets/profile/displayAttrs.mc)
+                my ($v, $l) = split /\s*(?<!\\),\s*/, $line;
+                for ($v, $l) { s/\\,/,/g }
+                push @$val_prop, [$v, $l];
+            }
+            $vals->{props}{vals} = $val_prop;
         }
-        $vals->{props}{vals} = $val_prop;
     }
 </%perl>
     <td class="name"><% $vals->{props}{disp} %>:</td>
