@@ -26,6 +26,12 @@ Added the C<subelement_id> parameter to the story and media C<list()> methods.
 Added placeholder for Japanese localization. Expect a translation soon!
 [David]
 
+=item *
+
+Codeselect field Perl code can now return an array of array references or a
+hash reference, in addition to the previous support for an even-sized array
+reference. [David]
+
 =back
 
 =head2 Bug Fixes
@@ -85,6 +91,11 @@ Harder. [David]
 The F<inst/upgrade/1.9.1/xtract_attype2.pl> upgrade script now detects whether
 the database has been converted to use boolean columns and casts values moved
 from numeric columns accordingly. Reported by Brad Harder. [David]
+
+=item *
+
+Fields that use the "codeselect" widget work again. Reported by Michael
+Glaesemann. [David]
 
 =back
 
